@@ -831,12 +831,11 @@ class FrontendForm(RsyslogQueueForm, ModelForm):
             if not cleaned_data.get('filebeat_config'):
                 self.add_error('filebeat_config', "This field is required.")
             else:
-                if "output." in cleaned_data.get('filebeat_config'):
-                    self.add_error('filebeat_config', "Filebeat config cannot contains 'output', this is managed by Vulture")
-                elif "fields:" in cleaned_data.get('filebeat_config'):
-                    self.add_error('filebeat_config', "Filebeat config cannot contains 'fields', this is managed by Vulture")
-                elif "type:" in cleaned_data.get('filebeat_config'):
-                    self.add_error('filebeat_config', "Filebeat config cannot contains 'type', this is managed by Vulture")
+                for line in cleaned_data.get('filebeat_config').split('\n'):
+                    if re_match("^type:", line) or re_match("^\s*-\s*type:", line):
+                        print("Filebeat config cannot contains 'type', this is managed by Vulture")
+                    if re_match("^output:", line):
+                        print("Filebeat config cannot contains 'output', this is managed by Vulture")
 
         if mode == "filebeat" and cleaned_data.get('filebeat_listening_mode') == "tcp":
             if not cleaned_data.get('timeout_client'):
